--- a/app/views/templates/default.scala.html
+++ b/app/views/templates/default.scala.html
@@ -22,6 +22,10 @@
 				<!--@forRole(UserRole.USER) {-->
 					<!--<li class="@("active".when(tab == "serviceA"))"><a href="@routes.Application.serviceA">A</a></li>-->
 				<!--}-->
+
+				@forRole(UserRole.USER) {
+					<li><a href="@routes.SpendTrackingController.metaTracking">@Messages("spendings.meta")</a>
+				}
 				@forRole(UserRole.USER) {
 					<li><a href="@routes.SpendTrackingController.mainTracking">@Messages("spendings.tracking")</a>
 				}
