--- a/app/views/spendings/meta_tracking.scala.html
+++ b/app/views/spendings/meta_tracking.scala.html
@@ -1,7 +1,7 @@
 @()(implicit user: User, messages: Messages, menus: List[utils.services.data.Menu])
 
 @views.html.templates.logged(title = "Content editor", tab = "editor") {
-  <h2>@Messages("spendings.tracking")</h2>
+  <h2>@Messages("spendings.meta")</h2>
   <div class="row">
     <!--<div class="col-md-3 col-md-offset-3">-->
     <div class="col-md-6">
