--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -9,8 +9,11 @@
 		<link rel="shortcut icon" type="image/png" href="@routes.MyAssets.img("favicon.png")">
 		<link rel="stylesheet" media="screen" href="@routes.MyAssets.lib("bootstrap/css/bootstrap.min.css")">
 		<link rel="stylesheet" media="screen" href="/css/main.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 		<script data-main="@routes.MyAssets.js("spendings")" src="/lib/requirejs/require.js" type="text/javascript"></script>
+		<!-- TODO: understand why second import doesn't work -->
 		<script data-main="@routes.MyAssets.js("main")" src="/lib/requirejs/require.js" type="text/javascript"></script>
 		@styles
 	</head>
