--- a/app/views/templates/default.scala.html
+++ b/app/views/templates/default.scala.html
@@ -18,11 +18,7 @@
 			<li><a href="@menu.url">@Messages(menu.title)</a></li>
 			}
 			<!--<li class="@("active".when(tab == "index"))"><a href="@routes.Application.index">@Messages("index.page")</a></li>-->
-			<!--@loggedUser.map { implicit user =>-->
-				<!--@forRole(UserRole.USER) {-->
-					<!--<li class="@("active".when(tab == "serviceA"))"><a href="@routes.Application.serviceA">A</a></li>-->
-				<!--}-->
-
+			@loggedUser.map { implicit user =>
 				@forRole(UserRole.USER) {
 					<li><a href="@routes.SpendTrackingController.metaTracking">@Messages("spendings.meta")</a>
 				}
@@ -33,7 +29,7 @@
 					<li><a href="@routes.EditorController.editorPage">@Messages("editor.title")</a></li>
 				}
 				<!--<li class="@("active".when(tab == "myaccount"))"><a href="@routes.Application.myAccount">@Messages("topbar.myaccount")</a></li>-->
-			<!--}-->
+			}
 		</ul>
 	}
 	<ul class="nav navbar-nav navbar-right">
