--- a/app/views/templates/default.scala.html
+++ b/app/views/templates/default.scala.html
@@ -25,9 +25,12 @@
 				@forRole(UserRole.USER) {
 					<li><a href="@routes.SpendTrackingController.mainTracking">@Messages("spendings.tracking")</a>
 				}
-				@forRole(UserRole.ADMIN) {
-					<li><a href="@routes.EditorController.editorPage">@Messages("editor.title")</a></li>
+				@forRole(UserRole.USER) {
+					<li><a href="@routes.SpendTrackingController.reportTracking">@Messages("spendings.reports")</a>
 				}
+				<!--@forRole(UserRole.ADMIN) {-->
+					<!--<li><a href="@routes.EditorController.editorPage">@Messages("editor.title")</a></li>-->
+				<!--}-->
 				<!--<li class="@("active".when(tab == "myaccount"))"><a href="@routes.Application.myAccount">@Messages("topbar.myaccount")</a></li>-->
 			}
 		</ul>
